project(InterviewBit-Arrays)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

#add_executable(InterviewBit-Arrays MaxSumContiguousSubarray.cpp)
#add_executable(InterviewBit-Arrays SpiralOrderMatrix1.cpp)
#add_executable(InterviewBit-Arrays RotateArray.cpp)
add_executable(InterviewBit-Arrays SpiralOrderMatrix2.cpp)