project(InterviewBit-Arrays)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

#add_executable(InterviewBit-Arrays MaxSumContiguousSubarray.cpp)
#add_executable(InterviewBit-Arrays SpiralOrderMatrix1.cpp)
#add_executable(InterviewBit-Arrays SpiralOrderMatrix2.cpp)
#add_executable(InterviewBit-Arrays RotateArray.cpp)
#add_executable(InterviewBit-Arrays LargestNumber.cpp)
#add_executable(InterviewBit-Arrays FirstMissingInteger.cpp)
#add_executable(InterviewBit-Arrays SetMatrixZeros.cpp)
#add_executable(InterviewBit-Arrays RotateMatrix.cpp)
#add_executable(InterviewBit-Arrays WaveArray.cpp)
#add_executable(InterviewBit-Arrays N3RepeatNumber.cpp)
#add_executable(InterviewBit-Arrays PrettyPrint.cpp)
add_executable(InterviewBit-Arrays CardinalitySorting.cpp)