project(InterviewBit-String)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

#add_executable(InterviewBit-String ImplementStrStr.cpp)
#add_executable(InterviewBit-String ReverseTheString.cpp)
#add_executable(InterviewBit-String CountAndSay.cpp)
#add_executable(IntervieBit-String Atoi.cpp)
add_executable(InterviewBit-String LongestCommonPrefix.cpp)